--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -7,6 +8,7 @@ body
     margin: 0%;
     padding: 0;
 }
+
 #cabecera
 {
     background: #33A;
@@ -17,6 +19,12 @@ body
     padding: 0.5em;    
 }
 
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -25,10 +33,11 @@ body
 }
 #Container
 {
+    background: white;
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
@@ -39,5 +48,6 @@ body
 
 #post
 {
+    background: white;
     padding: 1em;
 }
